# video-game-music-player

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  app.js  download  index.html  khinsider.js  khinsider.test.js  package-lock.json  package.json  styles.css
docs/: architecture.md
shaders/: ui.hlsl
src/: main.c  player_state.c  player_state.h  track.c  track.h
src/engine/: api.h  audio.c  audio.h  image_wic.c  image_wic.h  input.c  input.h  math.c  math.h  time.c  time.h  ui.c  ui.h  ui_font.c  ui_font.h  ui_renderer.h  ui_renderer_d3d12.c  window.c  window.h
src/source/: khinsider.c  khinsider.h  ocremix.c  ocremix.h  radio_source.c  radio_source.h
tests/: khinsider_tests.c  player_state_tests.c  source_tests.c  track_tests.c  ui_font_tests.c
